# read_glog

./: README.md
mytest_glog/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
mytest_glog/.cache/clangd/index/: main.cpp.C77AD9670FD2D01C.idx
mytest_glog/independent_env/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  little_test.cpp
note/: 一些写代码的技巧.md  关于Windows下dll的知识.md  关于linux的错误信号处理.md  关于宏的一些知识点.md  关于编译器的内置红的知识点.md  笔记.md
src/: logging.cc  utilities.cc
src/glog/: logging.h
